[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/enemies/spiderLikeThing/leg.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/puzzle_props/platforms/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/puzzle_props/platforms/walkingPlatform.gd" type="Script" id=3]

[node name="KinematicBody2D" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="FrontLegs" type="Node2D" parent="." index="1"]
position = Vector2( -32, 2 )
z_as_relative = false

[node name="leg" parent="FrontLegs" index="0" instance=ExtResource( 1 )]

[node name="leg2" parent="FrontLegs" index="1" instance=ExtResource( 1 )]

[node name="BackLegs" type="Node2D" parent="." index="2"]

[node name="leg" parent="BackLegs" index="0" instance=ExtResource( 1 )]
position = Vector2( -32, 2 )
flipped = false

[node name="leg2" parent="BackLegs" index="1" instance=ExtResource( 1 )]
position = Vector2( -32, 2 )
flipped = false

[node name="LowMidCheck" type="RayCast2D" parent="." index="4"]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="HgihMidCheck" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="FrontCheck" type="RayCast2D" parent="." index="6"]
position = Vector2( 112, 0 )
enabled = true
cast_to = Vector2( 0, 500 )

[node name="BackCheck" type="RayCast2D" parent="." index="7"]
position = Vector2( -112, 0 )
enabled = true
cast_to = Vector2( 0, 500 )

[node name="Tween" type="Tween" parent="." index="8"]
